--- a/Nodemail_|_Gmail_API_OAuth_2_0.ipynb
+++ b/Nodemail_|_Gmail_API_OAuth_2_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0iUQbQNYVdCyRahFMgCM+",
+      "authorship_tag": "ABX9TyPOvaFnJY8c/gA1eRuyqTZB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #1. Install Node.js in your Google Colab environment:**"
+        "#**Step # 1: Mounted at /content/drive**"
       ],
       "metadata": {
         "id": "Hq1mSMFyPwLs"
@@ -53,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mm6TA0397jcY",
-        "outputId": "8f36874d-0f6a-4c28-fe10-0bb368bb2531"
+        "outputId": "266730c7-e59b-4b30-a2d2-0ffdceec53a2"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,99 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #2. Install Node.js in your Google Colab environment:**"
+        "#**Step #2: Uninstall the current version of npm by running the following command in a code cell:**"
+      ],
+      "metadata": {
+        "id": "EezrWBdXp8oA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "!npm uninstall -g npm"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k7Zfh8X2py98",
+        "outputId": "0ee01e31-8c98-4f7f-9cae-a8774788eb44"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ERROR: npm v10.2.1 is known not to run on Node.js v12.22.9.  This version of npm supports the following node versions: `^18.17.0 || >=20.5.0`. You can find the latest version at https://nodejs.org/.\n",
+            "\n",
+            "ERROR:\n",
+            "/usr/lib/node_modules/npm/lib/utils/exit-handler.js:19\n",
+            "  const hasLoadedNpm = npm?.config.loaded\n",
+            "                           ^\n",
+            "\n",
+            "SyntaxError: Unexpected token '.'\n",
+            "\u001b[90m    at wrapSafe (internal/modules/cjs/loader.js:915:16)\u001b[39m\n",
+            "\u001b[90m    at Module._compile (internal/modules/cjs/loader.js:963:27)\u001b[39m\n",
+            "\u001b[90m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)\u001b[39m\n",
+            "\u001b[90m    at Module.load (internal/modules/cjs/loader.js:863:32)\u001b[39m\n",
+            "\u001b[90m    at Function.Module._load (internal/modules/cjs/loader.js:708:14)\u001b[39m\n",
+            "\u001b[90m    at Module.require (internal/modules/cjs/loader.js:887:19)\u001b[39m\n",
+            "\u001b[90m    at require (internal/modules/cjs/helpers.js:74:18)\u001b[39m\n",
+            "    at module.exports (/usr/lib/node_modules/\u001b[4mnpm\u001b[24m/lib/cli-entry.js:15:23)\n",
+            "    at module.exports (/usr/lib/node_modules/\u001b[4mnpm\u001b[24m/lib/es6/validate-engines.js:39:10)\n",
+            "    at module.exports (/usr/lib/node_modules/\u001b[4mnpm\u001b[24m/lib/cli.js:4:31)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Step #3: Install the latest version of npm by running the following command in a code cell:**"
+      ],
+      "metadata": {
+        "id": "nqQwLsSVqUGm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "!npm install -g npm@latest"
+      ],
+      "metadata": {
+        "id": "Ub-X12K7pQFe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Step #4: Verify that the latest version of npm is installed by running the following command in a code cell:**"
+      ],
+      "metadata": {
+        "id": "Wt5c9UBopQeN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "!npm --version"
+      ],
+      "metadata": {
+        "id": "YcwV4wippQqh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Step #5: Install Node.js in your Google Colab environment:**"
       ],
       "metadata": {
         "id": "OwRIOvslP0Jj"
@@ -91,7 +183,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #3: Update the version of Python by running the following command in a cell of your Colab notebook:**"
+        "#**Step #6: Update the version of Python by running the following command in a cell of your Colab notebook:**"
       ],
       "metadata": {
         "id": "Th_a2KUPTbNu"
@@ -114,7 +206,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #4: Check the current version of Node.js used by the notebook by running the command `!node --version` in a code cell.**"
+        "#**Step #7: Check the current version of Node.js used by the notebook by running the command `!node --version` in a code cell.**"
       ],
       "metadata": {
         "id": "psk2rOZMP4AM"
@@ -146,7 +238,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #5: Install nvm (Node Version Manager) by running the following command in a code cell:**"
+        "#**Step #8: Install nvm (Node Version Manager) by running the following command in a code cell:**"
       ],
       "metadata": {
         "id": "5wKHkdI-cIjO"
@@ -156,7 +248,17 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "!curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash"
+        "# Install nvm (Node Version Manager)\n",
+        "!curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash\n",
+        "\n",
+        "# Source nvm to make it available in your current session\n",
+        "!source ~/.nvm/nvm.sh\n",
+        "\n",
+        "# Install a compatible Node.js version (e.g., 20.5.0)\n",
+        "!nvm install 12.22.9\n",
+        "\n",
+        "# Use the installed Node.js version\n",
+        "!nvm use 12.22.9"
       ],
       "metadata": {
         "id": "LIzqwQf4cJOk"
@@ -167,7 +269,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #6: Install the latest version of Node.js by running the following command:**"
+        "#**Step #9: Install the latest version of Node.js by running the following command:**"
       ],
       "metadata": {
         "id": "S4q8xPOQcJll"
@@ -177,30 +279,25 @@
       "cell_type": "code",
       "source": [
         "\n",
+        "# Install nvm (Node Version Manager)\n",
+        "!curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash\n",
+        "\n",
+        "# Source the nvm environment to make it available in your current session\n",
+        "!source ~/.nvm/nvm.sh\n",
+        "\n",
+        "# Install the latest version of Node.js\n",
         "!nvm install node"
       ],
       "metadata": {
-        "id": "pWw9SXp9cJ5M",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "87fd254d-8395-4cae-f7e3-7bca2d21a167"
+        "id": "pWw9SXp9cJ5M"
       },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/bin/bash: line 1: nvm: command not found\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #7: To install nodemailer and google-auth-library using npm, you can use the following command in a code cell:**"
+        "#**Step #10: To install nodemailer and google-auth-library using npm, you can use the following command in a code cell:**"
       ],
       "metadata": {
         "id": "sv4HpudYcKJR"
@@ -221,7 +318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Step #5. Create a new file in your project named \"server.js\" and require the nodemailer and google-auth-library packages. You can use the following code as a starting point:**"
+        "#**Step #11. Create a new file in your project named \"server.js\" and require the nodemailer and google-auth-library packages. You can use the following code as a starting point:**"
       ],
       "metadata": {
         "id": "V1988VJGP41O"
